# streamlit_dashboard

./: .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml
src/etl/: etl_pipeline.py  schemas.py
src/ui/controllers/: superstore_controller.py
src/ui/models/: superstore_model.py
src/ui/views/: superstore_view.py
