[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["Salman Zaidi <salman.zaidi@torc.ai>"]
packages = [
    {include = "etl", from = "src"},
    {include = "models", from = "src/ui"},
    {include = "views", from = "src/ui"},
    {include = "controllers", from = "src/ui"},
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
pandas = "^2.2.3"
loguru = "^0.7.2"
plotly = "^5.24.1"
matplotlib = "^3.9.3"
xlrd = "^2.0.1"
ruff = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
